  * Added support for Qt 'public slot:' declarations.
  * Added support for 'ignore' @dub setting.
  * Added support for custom (or no) destructors.
  * Fixed bugs related to overloaded methods and constructors.
  * Added support for const char * return type.
  * Added support for delete in C++ and/or Lua (DeletableOutOfLua class).
  * Added 'deleted' method when the class can be destroyed out of Lua.
  * Added support for custom constructors.

== 0.6.6 2010-12-16

* Major enhancements
  * Added support for @dub custom Doxygen tag to set class options.

== 0.6.5 2010-12-15

* Major enhancements
  * Added support for custom_types (defined with Dub::Lua.function_generator.custom_type).
  * Added support for lib_name and other customizations through klass.opts.

== 0.6.4 2010-07-14

* 1 enhancement
  * Fixed homepage link in gem and documentation.

== 0.6.3 2010-07-07

* 1 enhancement
  * Should ignore non-public member methods.

== 0.6.2 2010-07-07

* 1 enhancement
  * Added an option define (DUB_LUA_NO_OPEN) to replace luaopen_xx by luaload_xx
  * Added char in the list of 'int' types.

== 0.6.1 2010-03-12

* 2 enhancements
  * Wrapping all function calls in try.. catch blocks
  * Added support for custome templates (customize exception handling for example)

== 0.6.0 2010-03-11

* 4 enhancements
  * added support for custom tostring methods for classes
  * fixed parsing of templated return types
  * static class methods are now registered in the namespace as Klass_method
  * removing functions and methods with class pointer arguments (could use lists later on)
  * better parsing of complex types (including nested template arguments)

== 0.5.1 2010-03-05

* 2 minor enhancements
  * if an argument is fully specified, should not append namespace
  * better handling of boolean values

== 0.5.0 2010-03-03

* 1 major enhancement
  * initial release and tested with OpenCV bindings for Lua
