@@ -10,6 +10,7 @@
   * Added support for delete in C++ and/or Lua (DeletableOutOfLua class).
   * Added 'deleted' method when the class can be destroyed out of Lua.
   * Added support for custom constructors.
+  * Giving access to meta-table in libname.ClassName_.
 
 == 0.6.6 2010-12-16
 
